sevicios completos de consultorio + swagger + Mapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 server.servlet.context-path=/consultorio
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
+
+# habilitar/deshabilitar api-doc - swagger-ui
+springdoc.api.docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+#definir la ruta de swagger-ui
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+
+# seleccionar paquetes, clases a escaner
+# springdoc.packagesToScan=com.paquete1 el paquete que quieras que se vea la documentacion
+#esto es para ocultar los controladores del swagger
+#springdoc.pathsToMatch=/test/**, /support/**, /xyz/**
+
