--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ springdoc.swagger-ui.path=/doc/swagger-ui.html
 #esto es para ocultar los controladores del swagger
 #springdoc.pathsToMatch=/test/**, /support/**, /xyz/**
 
+####Ruta Swager ####
+#http://localhost:8080/consultorio/doc/swagger-ui/index.html#/
