--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,13 @@ springdoc.swagger-ui.path=/doc/swagger-ui.html
 ####Ruta Swager ####
 #http://localhost:8080/consultorio/doc/swagger-ui/index.html#/
 
+
+#keyCloak
+spring.security.oauth2.client.registration.keycloak.client-id=loggin
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/consultorio
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=consultorio
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/consultorio
